crates/dpaa2-tools/tests/snapshots/link_faces__dry_run_shows_a_fresh_link_connect_with_provenance.snap
---
source: crates/dpaa2-tools/tests/link_faces.rs
expression: "render::render_links(&compiled.plan, &links)"
---
link transitions (1 link(s)) [exact plan ensure would execute]:
  [disruptive] connect kernel/dpni/1 <-> sec/dpni/1 @ dprc.1
    - link-edge construct=l0 request=0 value=0 [measured] anchor: object-model.md §2, DPNI-I9 pseudo-wire
      - dpnis request=1 value=1 [measured] anchor: object-model.md §2: one dpni per terminated port, link end, fabric membership
      - dpnis request=1 value=1 [measured] anchor: object-model.md §2: one dpni per terminated port, link end, fabric membership
