crates/dpaa2-tools/tests/snapshots/link_faces__status_detail_shows_a_converged_link_from_dprc_get_connection.snap
---
source: crates/dpaa2-tools/tests/link_faces.rs
expression: "render::render_link_detail(&rows, &[])"
---
link detail (1 link(s)) [read-only; never gates convergence]:
  l0 dpni.1 <-> dpni.2 connection=connected
obligations (0) [read-only; gates no convergence]:
  (none)
